judequinn.angularjs time format filter for sortable-app

--- a/pgups/templates/pgups/competition_starts_sort.html
+++ b/pgups/templates/pgups/competition_starts_sort.html
@@ -55,7 +55,7 @@
 
 								<div>
 									{$ competitor.distance $} {$ competitor.style $} {$ competitor.age $} {$ competitor.gender $}
-									<div class="pull-right">{$ competitor.prior_time $}</div>
+									<div class="pull-right">{$ competitor.prior_time | time $}</div>
 								</div>
 
 							</div>
@@ -80,7 +80,7 @@
 
 								<div>
 									{$ competitor.distance $} {$ competitor.style $} {$ competitor.age $} {$ competitor.gender $}
-									<div class="pull-right">{$ competitor.prior_time $}</div>
+									<div class="pull-right">{$ competitor.prior_time | time $}</div>
 								</div>
 
 							</div>
@@ -123,7 +123,7 @@
 
 									<div>
 										{$ competitor.distance $} {$ competitor.style $} {$ competitor.age $} {$ competitor.gender $}
-										<div class="pull-right">{$ competitor.prior_time $}</div>
+										<div class="pull-right">{$ competitor.prior_time | time $}</div>
 									</div>
 								</div>
 							</div>
