judequinn.angularjs fixed create-competition-app, more icons

--- a/pgups/templates/pgups/competition_team.html
+++ b/pgups/templates/pgups/competition_team.html
@@ -52,7 +52,7 @@
 	</table>
 
 				{% if user.is_authenticated %}
-				<button class="btn btn-lg btn-success pull-right" type="submit">Сохранить изменения</button>
+				<button class="btn btn-lg btn-success pull-right" type="submit">Сохранить изменения <span class="glyphicon glyphicon-ok"></span></button>
 
 		</form>
 			{% endif %}
