--- a/pgups/templates/pgups/competition_create.html
+++ b/pgups/templates/pgups/competition_create.html
@@ -20,15 +20,18 @@
 
 	<div ng-app="createCompetitionApp" ng-controller="CreationFormController as creation"> <!-- createCompetitionApp -->
 
+
+
 	<input type="hidden" name="csrf_token" ng-init="csrf_token='{{csrf_token}}'" ng-model="csrf_token">
 
 		<form name="creationForm" class="form-horizontal" role="form" novalidate> <!-- creationForm -->
 
 			<div class="container">
 
-				{$ creation.data $}
-
-				{$ creation.tours $}
+			<!-- DEBUG -->
+			<input type="checkbox" ng-model="showDebugData"><span> DEBUG: показать данные</span>
+			<p ng-show="showDebugData">{$ creation.data $}<br>{$ creation.fetchedData $}</p>
+			<!-- DEBUG -->
 
 				<!-- Step 1 -->
 				<div ng-show="creation.step === 1" class="animation-show-hide">
@@ -53,9 +56,10 @@
 						<div class="form-group">
 							<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="representative">Тип:</label>
 							<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
-								<select class="form-control" name="type" ng-model="creation.data.type" type="text" required/>
+								<select class="form-control" name="type" ng-model="creation.data.type" required/>
 									<option value="0">детские</option>
 									<option value="1">взрослые</option>
+									<option value="2">смешанные</option>
 								</select>
 								<p class="error-block" ng-show="creationForm.type.$dirty && requestForm.representative.$error.required">Выберите тип</p>
 							</div>
@@ -85,7 +89,7 @@
 
 					<div class="button-wrapper row">
 
-						<button class="btn btn-lg btn-success pull-right col-lg-2" ng-click="creation.nextStep()" ng-disabled="false">
+						<button class="btn btn-lg btn-default pull-right col-lg-2" ng-click="creation.nextStep()" ng-disabled="creationForm.$invalid">
 							Продолжить <span class="glyphicon glyphicon-chevron-right"></span>
 						</button>
 
@@ -146,11 +150,11 @@
 
 					<div class="button-wrapper row">
 
-						<button class="btn btn-lg btn-danger pull-left col-lg-2" ng-click="creation.prevStep()">
+						<button class="btn btn-lg btn-default pull-left col-lg-2" ng-click="creation.prevStep()">
 							<span class="glyphicon glyphicon-chevron-left"></span> Вернуться
 						</button>
 
-						<button class="btn btn-lg btn-success pull-right col-lg-2" ng-click="creation.nextStep(); creation.generateTours(); creation.checkIfAllSelected()">
+						<button class="btn btn-lg btn-default pull-right col-lg-2" ng-click="creation.nextStep(); creation.generateTours(); creation.checkIfAllSelected()" ng-disabled="creation.selected(creation.fetchedData.ages).length < 1 || creation.selected(creation.fetchedData.styles).length < 1 || creation.selected(creation.fetchedData.distances).length < 1">
 							Продолжить <span class="glyphicon glyphicon-chevron-right"></span>
 						</button>
 
@@ -182,11 +186,11 @@
 
 					<div class="button-wrapper row">
 
-						<button class="btn btn-lg btn-danger pull-left col-lg-2" ng-click="creation.prevStep()">
+						<button class="btn btn-lg btn-default pull-left col-lg-2" ng-click="creation.prevStep()">
 							<span class="glyphicon glyphicon-chevron-left"></span> Вернуться
 						</button>
 
-						<button class="btn btn-lg btn-success pull-right col-lg-3" ng-click="creation.nextStep(); creation.groupTours(creation.selected(creation.tours))">
+						<button class="btn btn-lg btn-default pull-right col-lg-3" ng-click="creation.nextStep(); creation.groupTours(creation.selected(creation.tours))" ng-disabled="creation.selected(creation.tours) < 1">
 							Продолжить <span class="glyphicon glyphicon-chevron-right"></span>
 						</button>
 
@@ -222,7 +226,7 @@
 
 					<div class="button-wrapper row">
 
-						<button class="btn btn-lg btn-danger pull-left col-lg-2" ng-click="creation.prevStep()">
+						<button class="btn btn-lg btn-default pull-left col-lg-2" ng-click="creation.prevStep()">
 							<span class="glyphicon glyphicon-chevron-left"></span> Вернуться
 						</button>
 
@@ -253,8 +257,6 @@
 {% endblock %}
 
 {% block additionaljs %}
-
 	<script src="https://code.angularjs.org/1.4.9/angular-animate.min.js"></script> <!-- Angular animations -->
 	<script src="{% static 'js/create-competition-app.js' %}"></script> <!-- Competition reg App -->
-
 {% endblock %}
