--- a/pgups/templates/pgups/userrequest.html
+++ b/pgups/templates/pgups/userrequest.html
@@ -68,7 +68,7 @@
 				</tbody>
 			</table>
 			{% if user.is_authenticated %}
-				<button class="btn btn-lg btn-success pull-right" type="submit">Сохранить изменения</button>
+				<button class="btn btn-lg btn-success pull-right" type="submit">Сохранить изменения <span class="glyphicon glyphicon-ok"></span></button>
 
 		</form>
 			{% endif %}
