--- a/pgups/templates/pgups/userrequest.html
+++ b/pgups/templates/pgups/userrequest.html
@@ -68,6 +68,7 @@
 				</tbody>
 			</table>
 			{% if user.is_authenticated %}
+				<a href="{% url 'regrequest' userrequest_id=userrequest.id %}/" class="btn btn-lg btn-default pull-left" >Редактировать заявку<span class="glyphicon glyphicon-pencil"></span></a>
 				<button class="btn btn-lg btn-success pull-right" type="submit">Сохранить изменения <span class="glyphicon glyphicon-ok"></span></button>
 
 		</form>
