judequinn.angularjs hid debug reg form

--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -32,10 +32,10 @@
 
 			<div class="container">
 
-				<!-- DEBUG -->
+				<!-- DEBUG
 				<input type="checkbox" ng-model="showDebugData"><span> DEBUG: показать данные</span>
 				<p ng-show="showDebugData">{$ reg.form $}</p><br><br>
-				<!-- DEBUG -->
+				DEBUG -->
 
 				<!-- Well -->
 				<div class="well row">
