--- a/pgups/templates/pgups/tour.html
+++ b/pgups/templates/pgups/tour.html
@@ -9,7 +9,7 @@
 			<h1><b>{{ competition_name }}</b></h1>
 		</a>
 
-		<h2><b>{{tour_name}}</b></h2>
+		<h2><b>{{tour_name}}, подтверждённые участники</b></h2>
 	</div>
 
 	<div class="row">
