judequinn.angularjs teams list more details

--- a/pgups/templates/pgups/competition_team.html
+++ b/pgups/templates/pgups/competition_team.html
@@ -16,7 +16,7 @@
 			<h1><b>{{ competition.name }}</b></h1>
 		</a>
 
-		<h2><b>Команда {{team.name}}</b></h2>
+		<h2><b>{% if team != '' %}Команда {{team.name}}{% else %} Вне команд {% endif %}</b></h2>
 	</div> <!-- End of Heading -->
 
 		{% if user.is_authenticated %}<form role="form" method="POST">{% csrf_token %}{% endif %}
@@ -34,6 +34,10 @@
 							{% if competitor_form.instance.main_distance%}<span><b>{% endif %}
 							{{competitor_form.instance.person.last_name|title}} {{competitor_form.instance.person.first_name|title}}
 							{% if competitor_form.instance.main_distance%}</b></span>{% endif %}
+							({{competitor_form.instance.userrequest.representative}},
+                            <a class="decorated-link" href="{% url 'userrequest' userrequest_id=competitor_form.instance.userrequest.id %}">
+                                <b>заявка</b>
+                            </a>)
 						</td>
 						<td class="column-tour padding-15">
 							{% if competitor_form.instance.main_distance%}<span><b>{% endif %}
