--- a/pgups/templates/pgups/competition.html
+++ b/pgups/templates/pgups/competition.html
@@ -34,6 +34,9 @@
 					<a href="../../competition/team/{{competition.id}}/{{team.id}}/">{{team}}</a>
 				</li>
 			{% endfor %}
+				<li>
+					<a href="../../competition/team/{{competition.id}}/0/">Без команды</a>
+				</li>
 		</ul>
 		<hr> <!-- End of Teams -->
 
