judequinn.angularjs print fix

--- a/pgups/templates/pgups/cdsg_print.html
+++ b/pgups/templates/pgups/cdsg_print.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-{{cdsg.name}}, результаты ({{cdsg.competition.name}})
+{{cdsg.competition.name}}
 <br>
 <br>
 <div>
@@ -26,9 +26,9 @@
 			<table>
 
 				<col class="col0">
-				<col class="col1">
 				<col class="col2">
 				<col class="col3">
+				<col class="col4">
 
 				<tr>
 					<th colspan="4">
