--- a/pgups/templates/pgups/competition_create.html
+++ b/pgups/templates/pgups/competition_create.html
@@ -30,7 +30,7 @@
 
 			<!-- DEBUG -->
 			<input type="checkbox" ng-model="showDebugData"><span> DEBUG: показать данные</span>
-			<p ng-show="showDebugData">{$ creation.data $}<br>{$ creation.fetchedData $}</p>
+			<p ng-show="showDebugData">{$ creation.data $}<br>{$ creation.fetchedData $}<br>{$ creation.tours $}</p>
 			<!-- DEBUG -->
 
 				<!-- Step 1 -->
