--- a/pgups/templates/pgups/final_print.html
+++ b/pgups/templates/pgups/final_print.html
@@ -30,7 +30,8 @@
 					{% for competitor in tuple.1 %}
 				<tr>
                     <td class="position">{{ forloop.counter }}</td>
-                    <td class="result">{% if competitor.result %} {{competitor.result}} {% endif %}</td>
+                    <td class="result">{% if competitor.result %} {{competitor.result}} {% endif %}
+					{% if not competitor.main_distance %} в/к {% endif %}</td>
 					<td class="competitor">
 						{% if competitor.main_distance%}<span><b>{% endif %}
 						{{competitor.person.last_name|title}} {{competitor.person.first_name|title}}
