--- a/pgups/templates/pgups/userrequest.html
+++ b/pgups/templates/pgups/userrequest.html
@@ -29,7 +29,7 @@
 
 	<h3>Участники:</h3>
 
-		{% if user.is_authenticated %}<form role="form" method="POST">{% csrf_token %}{% endif %}
+		{% if user.is_authenticated %}<form role="form" method="POST">{% csrf_token %}
 
 		{{ competitor_formset.management_form }}
 
@@ -38,9 +38,7 @@
 				<tr>
 					<td class="column-name light-blue-background"><b>Участник</b></td>
 					<td class="column-tour padding-15 light-blue-background"><b>Дистанция</b></td>
-					{% if user.is_authenticated %}
 					<td class="column-approved padding-15 light-blue-background"><b>Подтверждение</b></td>
-					{% endif %}
 				</tr>
 
 				<tbody>
@@ -58,21 +56,29 @@
 							{{competitor_form.instance.tour.style.name}} {{competitor_form.instance.tour.distance.name}}
 							{% if competitor_form.instance.main_distance%}</b></span>{% endif %}
 						</td>
-						{% if user.is_authenticated %}
 						<td class="column-approved padding-15 text-center">{{competitor_form.approved}}</td>
-						{% endif %}
 					</tr>
 
 				{% endfor %}
 
 				</tbody>
 			</table>
-			{% if user.is_authenticated %}
 			<div class="userrequest-button-wrapper">
 				<a href="{% url 'regrequest' userrequest_id=userrequest.id %}/" class="btn btn-lg btn-default pull-left"><span class="glyphicon glyphicon-pencil"></span> Редактировать заявку</a>
 				<button class="btn btn-lg btn-success pull-right" type="submit">Сохранить изменения <span class="glyphicon glyphicon-ok"></span></button>
 			</div>
 		</form>
+
+			{% else %}
+			<table class="table table-striped table-hover table-bordered">
+                {% for person in persons %}
+				<tr>
+					<td>
+						{{person.last_name|title}} {{person.first_name|title}}
+					</td>
+				</tr>
+                {% endfor %}
+			</table>
 			{% endif %}
 </div>
 
