--- a/pgups/templates/pgups/userrequest.html
+++ b/pgups/templates/pgups/userrequest.html
@@ -53,7 +53,7 @@
 						</td>
 						<td class="column-tour padding-15">
 							{% if competitor_form.instance.main_distance%}<span><b>{% endif %}
-							{{competitor_form.instance.tour.style.name}} {{competitor_form.instance.tour.distance.name}}
+							{{competitor_form.instance.tour.style.name}} {{competitor_form.instance.tour.distance.name}} ({{competitor_form.instance.prior_time}})
 							{% if competitor_form.instance.main_distance%}</b></span>{% endif %}
 						</td>
 						<td class="column-approved padding-15 text-center">{{competitor_form.approved}}</td>
