judequinn.angularjs edit competition
judequinn.angularjs buffer with no start competitors

judequinn.angularjs competition edit type value

baka2

judequinn.angularjs json for competition edit

baka3

judequinn.angularjs json for competition edit min_age max_age

judequinn.angularjs edit competition

--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -388,3 +388,13 @@ select.ng-invalid.ng-dirty {
     background-color: #fff;
   }
 }
+.mb-20 {
+  margin-bottom: 20px !important;
+}
+.add-tour-form {
+  margin-top: 40px;
+  padding: 30px;
+}
+.no-margin-top {
+  margin-top: 0px !important;
+}
