judequinn.angularjs fixed grouptours

--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -45,6 +45,9 @@ body {
 .basic-list-larger {
   font-size: 1.2rem;
 }
+li.list-margin {
+  margin-bottom: .5em;
+}
 .no-padding {
   padding: 0;
 }
@@ -389,7 +392,7 @@ select.ng-invalid.ng-dirty {
   }
 }
 .mb-20 {
-  margin-bottom: 20px !important;
+  margin-bottom: 2em !important;
 }
 .add-tour-form {
   margin-top: 40px;
