judequinn.angularjs button + fixes

--- a/pgups/templates/pgups/competition_create.html
+++ b/pgups/templates/pgups/competition_create.html
@@ -12,10 +12,10 @@
 		<!-- Container -->
 		<div class="container">
 
-			<!-- DEBUG -->
+			<!-- DEBUG
 			<input type="checkbox" ng-model="showDebugData"><span> DEBUG: показать данные</span>
 			<p ng-show="showDebugData">{$ creation.data $}</p>
-			<!-- DEBUG -->
+			 DEBUG -->
 
 			<form name="creationForm" class="form-horizontal" role="form" novalidate> <!-- creationForm -->
 
