--- a/pgups/templates/pgups/competition.html
+++ b/pgups/templates/pgups/competition.html
@@ -105,6 +105,12 @@
 				</div>
 
 				<div class="col-lg-6 col-md-6 col-sm-6">
+				<a class="pull-right btn btn-lg btn-default" href="{% url 'competitionedit' competition_id=competition.id %}/" target="_blank">
+					<span class="glyphicon glyphicon-wrench"></span> <span>Редактировать соревнования</span>
+				</a>
+				</div>
+
+				<div class="col-lg-6 col-md-6 col-sm-6">
 						<form action="." method="POST" >{% csrf_token %}
 							<input type="hidden" name="competition_id" value="{{competition.id}}">
 							<input type="hidden" name="close" value="1">
