judequinn.angularjs margin-10

--- a/pgups/templates/pgups/competition.html
+++ b/pgups/templates/pgups/competition.html
@@ -104,10 +104,10 @@
 
 				</div>
 
-				<div class="col-lg-6 col-md-6 col-sm-6">
-				<a class="pull-right btn btn-lg btn-default" href="{% url 'competitionedit' competition_id=competition.id %}/" target="_blank">
-					<span class="glyphicon glyphicon-wrench"></span> <span>Редактировать соревнования</span>
-				</a>
+				<div class="col-lg-6 col-md-6 col-sm-6 margin-10">
+					<a class="pull-right btn btn-lg btn-default" href="{% url 'competitionedit' competition_id=competition.id %}/" target="_blank">
+						<span class="glyphicon glyphicon-wrench"></span> <span>Редактировать соревнования</span>
+					</a>
 				</div>
 
 				<div class="col-lg-6 col-md-6 col-sm-6">
